Hopefully fix another build problem...
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3980 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/3rdparty/wxswig/SWIG-1.3.29/Examples/GIFPlot/Makefile
+++ b/3rdparty/wxswig/SWIG-1.3.29/Examples/GIFPlot/Makefile
@@ -1,4 +1,4 @@
-prefix      = /u/jfaust
+prefix      = /u/jfaust/ros/ros-pkg/3rdparty/wxswig
 exec_prefix = ${prefix}
 RANLIB      = ranlib
 OPT         =
