--- a/3rdparty/wxswig/SWIG-1.3.29/Examples/Makefile
+++ b/3rdparty/wxswig/SWIG-1.3.29/Examples/Makefile
@@ -25,7 +25,7 @@ TARGET     =
 CC         = gcc
 CXX        = g++
 CFLAGS     = 
-prefix     = /u/jfaust
+prefix     = /u/jfaust/ros/ros-pkg/3rdparty/wxswig
 exec_prefix= ${prefix}
 SRCS       =
 INCLUDES   =
