Fix wxswig compile (please?)
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3997 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/3rdparty/wxswig/Makefile
+++ b/3rdparty/wxswig/Makefile
@@ -3,8 +3,9 @@ all: wxswig
 VERSION = SWIG-1.3.29-wx
 WXSWIG_ROOT = $(shell rospack find wxswig)
 
-$(VERSION)/Makefile:
+$(VERSION)/Makefile: $(VERSION)/Makefile.in $(VERSION)/configure
 	cd $(VERSION) && \
+		./autogen.sh && \
 		./configure --prefix=$(WXSWIG_ROOT)
 
 $(VERSION): $(VERSION)/Makefile
@@ -19,6 +20,7 @@ clean:
 		make clean && \
 		rm -f Makefile
 	rm -rf bin
+	rm -rf share
 
 wipe: clean
 
