--- a/visualization/wx_camera_panel/CMakeLists.txt
+++ b/visualization/wx_camera_panel/CMakeLists.txt
@@ -10,7 +10,7 @@ include(${wxWidgets_USE_FILE})
 include_directories( ${wxWidgets_INCLUDE_DIRS} )
 
 # Find the combined swig flags for this project
-_rospack_invoke(${PROJECT_NAME} ${PROJECT_NAME} SWIG_FLAGS export/swig/flags)
+_rospack_invoke(${PROJECT_NAME} ${PROJECT_NAME} SWIG_FLAGS "--lang=swig" "--attrib=flags" "export")
 set(SWIG_FLAGS ${${PROJECT_NAME}_SWIG_FLAGS})
 
 # Find the wxswig executable
