modified Makefiles for new rospack syntax
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4033 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/3rdparty/estar/Makefile
+++ b/3rdparty/estar/Makefile
@@ -23,7 +23,7 @@ SOURCE_DIR=  $(PWD)/estar-$(VERSION)
 UNPACK_CMD=  tar xfz
 BUILD_DIR=   $(PWD)/build
 INST_DIR=    $(PWD)/local
-BOOST_DIR=   `rospack --cflags-only-I boost`
+BOOST_DIR=   `rospack cflags-only-I boost`
 
 SVN_DIR=     $(PWD)/estar-svn
 SVN_REV=     HEAD
