--- a/util/logsetta/CMakeLists.txt
+++ b/util/logsetta/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 2.6)
 include(rosbuild)
 rospack(logsetta)
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-subdirs(carmen imu odom base_actual)
+subdirs(carmen imu odom base_actual localize_extract)
