made use() return a bool in kinematic constraints
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4057 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/motion_planning/kinematic_planning/CMakeLists.txt
+++ b/motion_planning/kinematic_planning/CMakeLists.txt
@@ -3,3 +3,4 @@ include(rosbuild)
 rospack(kinematic_planning)
 rospack_add_executable(kinematic_planning src/kinematic_planning.cpp)
 add_subdirectory(test)
+rospack_add_link_flags(kinematic_planning)
