--- a/3rdparty/wxpropgrid/Makefile
+++ b/3rdparty/wxpropgrid/Makefile
@@ -3,7 +3,7 @@ all: propgrid
 VERSION = propgrid-1.4.0-RC1
 WXPROPGRID_ROOT = $(shell rospack find wxpropgrid)
 
-$(VERSION)/Makefile:
+$(VERSION)/Makefile: $(VERSION)/Makefile.in $(VERSION)/wg_changelist.txt $(VERSION)/configure
 	cd $(VERSION) && \
 		./configure --prefix=$(WXPROPGRID_ROOT)/propgrid_install
 
