first version of a motion_validator
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4096 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/motion_planning/kinematic_planning/CMakeLists.txt
+++ b/motion_planning/kinematic_planning/CMakeLists.txt
@@ -2,5 +2,8 @@ cmake_minimum_required(VERSION 2.6)
 include(rosbuild)
 rospack(kinematic_planning)
 rospack_add_executable(kinematic_planning src/kinematic_planning.cpp)
-add_subdirectory(test)
+rospack_add_executable(motion_validator src/motion_validator.cpp)
 rospack_add_link_flags(kinematic_planning)
+rospack_add_link_flags(motion_validator)
+
+add_subdirectory(test)
