--- a/vision/spacetime_stereo/CMakeLists.txt
+++ b/vision/spacetime_stereo/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 2.6)
 include(rosbuild)
 rospack(spacetime_stereo)
 set(ROS_COMPILE_FLAGS "-Wall -g -O3 -fomit-frame-pointer -funroll-loops")
-rospack_add_executable(sts_node sts_node.cpp)
+rospack_add_executable(sts sts.cpp)
+
 
 
 
