removed dependence on libpr2HW, libpr2API, rosgazebo pr2_gazebo. move pr2Core into deprecated, awaiting updates to:   pr2_etherDrive - this currently runs on the hardware, we need to remove dependency on pr2Core, though this will be replaced by pr2_etherCAT eventually.   exec_trex, executive_trex_pr2   libKinematics - will be deprecated itself soon   overhead_grasp_behavior   pr2_kinematic_controllers
and following deprecated packages are now broken, but should have no impact on working code.
  genericControllers
  rosControllers
  testControllers
  pr2Controllers
  old_mechanism_control
  pr2_gui
  libKDL



git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4114 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/robot_descriptions/gazebo_robot_description/CMakeLists.txt
+++ b/robot_descriptions/gazebo_robot_description/CMakeLists.txt
@@ -18,20 +18,15 @@ add_custom_target(pr2_gazebo_model ALL
 		  DEPENDS urdf2gazebo
 		  COMMENT "Building Gazebo model for PR2 Standard Model")
 
-add_custom_target(pr2_gazebo_model_nolimit_rosgazebo ALL
-		  COMMAND ${urdf2gazebo_exe} ${wg_robot_description_PACKAGE_PATH}/pr2/pr2_rosgazebo.xml ${gazebo_robot_description_PACKAGE_PATH}/world/pr2_xml_nolimit.model 1
-		  DEPENDS urdf2gazebo
-		  COMMENT "Building Gazebo model for PR2 Rosgazebo Model without Joint Limits for Kinematics")
-
-add_custom_target(pr2_gazebo_model_rosgazebo ALL
-		  COMMAND ${urdf2gazebo_exe} ${wg_robot_description_PACKAGE_PATH}/pr2/pr2_rosgazebo.xml ${gazebo_robot_description_PACKAGE_PATH}/world/pr2_xml_rosgazebo.model
-		  DEPENDS urdf2gazebo
-		  COMMENT "Building Gazebo model for PR2 Rosgazebo Model")
-
 add_custom_target(pr2_gazebo_model_test ALL
 		  COMMAND ${urdf2gazebo_exe} ${wg_robot_description_PACKAGE_PATH}/pr2/pr2_test_actuators.xml ${gazebo_robot_description_PACKAGE_PATH}/world/pr2_xml_test.model
 		  DEPENDS urdf2gazebo
 		  COMMENT "Building Gazebo model for PR2 Test Actuators")
+
+add_custom_target(pr2_gazebo_model_nolimit_test ALL
+		  COMMAND ${urdf2gazebo_exe} ${wg_robot_description_PACKAGE_PATH}/pr2/pr2_test_actuators.xml ${gazebo_robot_description_PACKAGE_PATH}/world/pr2_xml_nolimit_test.model 1
+		  DEPENDS urdf2gazebo
+		  COMMENT "Building Gazebo model for PR2 Test Actuators with no limits")
 
 add_custom_target(pr2_gazebo_model_arm_test ALL
 		  COMMAND ${urdf2gazebo_exe} ${wg_robot_description_PACKAGE_PATH}/pr2_arm_test/pr2_arm_test.xml ${gazebo_robot_description_PACKAGE_PATH}/world/pr2_xml_arm_test.model
