--- a/drivers/simulator/gazebo_plugin/CMakeLists.txt
+++ b/drivers/simulator/gazebo_plugin/CMakeLists.txt
@@ -9,6 +9,7 @@ include_directories(srv/cpp)
 add_definitions(-Wall)
 #rospack_add_library(Pr2_Actarray src/Pr2_Actarray.cc)
 #rospack_add_library(Pr2_Gripper src/Pr2_Gripper.cc)
+rospack_add_library(Ros_Stereo_Camera src/Ros_Stereo_Camera.cc)
 rospack_add_library(Ros_Camera src/Ros_Camera.cc)
 rospack_add_library(Ros_Laser src/Ros_Laser.cc)
 #rospack_add_library(Ros_Node src/Ros_Node.cc)
