1) define NDEBUG when including signature.h to get around an instantiation problem in BOOST 2) minor code re-org
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4140 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/3rdparty/opencv/wgext/3DPoseEstimation/.project
+++ b/3rdparty/opencv/wgext/3DPoseEstimation/.project
@@ -3,11 +3,11 @@
 	<name>3DPoseEstimation</name>
 	<comment></comment>
 	<projects>
-		<project>OpenCV</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
 			<name>org.eclipse.cdt.managedbuilder.core.genmakebuilder</name>
+			<triggers>clean,full,incremental,</triggers>
 			<arguments>
 				<dictionary>
 					<key>?name?</key>
@@ -43,7 +43,7 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.enableAutoBuild</key>
-					<value>true</value>
+					<value>false</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.enableCleanBuild</key>
