only compiling the math part (minutes -> seconds compilation), and adding flags
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4148 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/3rdparty/bullet/Makefile
+++ b/3rdparty/bullet/Makefile
@@ -10,7 +10,7 @@ include $(shell rospack find mk)/download_unpack.mk
 bullet: $(SOURCE_DIR)
 	mkdir -p src
 	cd $(SOURCE_DIR) && cmake .
-	make -C $(SOURCE_DIR) 
+	make -C $(SOURCE_DIR) LibLinearMath
 	touch bullet
 clean:
 	rm -rf src $(SOURCE_DIR)
