Optimizations of the training sequence.
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4181 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/vision/dorylus/CMakeLists.txt
+++ b/vision/dorylus/CMakeLists.txt
@@ -3,4 +3,4 @@ include(rosbuild)
 rospack(dorylus)
 add_definitions(-Wall)
 rospack_add_executable(dorylus_node src/dorylus_node.cpp src/dorylus.cpp)
-
+target_link_libraries(dorylus_node profiler)
