--- a/util/tf/CMakeLists.txt
+++ b/util/tf/CMakeLists.txt
@@ -2,9 +2,9 @@ cmake_minimum_required(VERSION 2.6)
 include(rosbuild)
 rospack(tf)
 
-#rospack_add_library(tf )
+rospack_add_library(tf src/tf.cpp)
 rospack_add_executable(simpletest simpletest.cpp)
-#target_link_libraries(simpletest TF)
+target_link_libraries(simpletest tf)
 #rospack_add_executable(testtf src/test/testtf.cc)
 #target_link_libraries(testtf TF)
 #rospack_add_executable(test_interp src/test/test_interp.cc)
