git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4185 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/vision/spacetime_stereo/CMakeLists.txt
+++ b/vision/spacetime_stereo/CMakeLists.txt
@@ -3,7 +3,6 @@ include(rosbuild)
 rospack(spacetime_stereo)
 set(ROS_COMPILE_FLAGS "-Wall -g -O3 -fomit-frame-pointer -funroll-loops")
 rospack_add_executable(sts_node sts_node.cpp)
-rospack_add_executable(sts sts.cpp)
-
+#rospack_add_executable(sts sts.cpp)
 
 
