Basic template for highlevel controllers which integrate with TREX. Inclusion of MoveArm which uses kinematic_planning
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4199 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/highlevel/executive_trex/executive_trex_pr2/CMakeLists.txt
+++ b/highlevel/executive_trex/executive_trex_pr2/CMakeLists.txt
@@ -28,7 +28,9 @@ set(TREX_FILES src/Executive.cc
 	       src/CalcDistanceConstraint.cc 
 	       src/Components.cc
 	       src/BaseStateAdapter.cc
-	       src/BaseControllerAdapter.cc)
+	       src/BaseControllerAdapter.cc
+	       src/ArmStateAdapter.cc
+	       src/ArmControllerAdapter.cc)
 
 rospack_add_executable(build/trex_debug ${TREX_FILES})
 target_link_libraries(build/trex_debug Utils_g TREX_g)
