--- a/highlevel/executive_trex/executive_trex_pr2/cfg/pr2.cfg
+++ b/highlevel/executive_trex/executive_trex_pr2/cfg/pr2.cfg
@@ -4,10 +4,22 @@
  	<TeleoReactor name="exec" component="DeliberativeReactor" lookAhead="300" latency="10" solverConfig="../cfg/exec.solver.cfg"/>
 
 	<!-- ROS Adapters -->
- 	<TeleoReactor name="baseStateAdapter" component="BaseStateAdapter"  latency="0" lookAhead="0">
+ 	<TeleoReactor name="baseStateAdapter" component="BaseStateAdapter" timelineName="baseState" timelineType="BaseState" stateTopic="localizedpose">
 		<Timeline name="baseState"/>
 	</TeleoReactor>
- 	<TeleoReactor name="baseControllerAdapter" component="BaseControllerAdapter"  latency="0" lookAhead="1">
+ 	<TeleoReactor name="baseControllerAdapter" component="BaseControllerAdapter" timelineName="moveBase" timelineType="MoveBase" stateTopic="state" goalTopic="goal">
 		<Timeline name="moveBase"/>
+	</TeleoReactor>
+ 	<TeleoReactor name="leftArmStateAdapter" component="ArmStateAdapter" timelineName="leftArmState" timelineType="ArmState" stateTopic="left_pr2arm_pos">
+		<Timeline name="leftArmState"/>
+	</TeleoReactor>
+ 	<TeleoReactor name="leftArmControllerAdapter" component="ArmControllerAdapter" timelineName="moveLeftArm" timelineType="MoveArm" stateTopic="left_arm_state" goalTopic="left_arm_goal">
+		<Timeline name="moveLeftArm"/>
+	</TeleoReactor>
+ 	<TeleoReactor name="rightArmStateAdapter" component="ArmStateAdapter" timelineName="rightArmState" timelineType="ArmState" stateTopic="right_pr2arm_pos">
+		<Timeline name="rightArmState"/>
+	</TeleoReactor>
+ 	<TeleoReactor name="rightArmControllerAdapter" component="ArmControllerAdapter" timelineName="moveRightArm" timelineType="MoveArm" stateTopic="right_arm_state" goalTopic="right_arm_goal">
+		<Timeline name="moveRightArm"/>
 	</TeleoReactor>
 </Agent>
