Add functionality to read actuator configuration information from the eeprom of the MCB
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4217 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/drivers/motor/ethercat_hardware/CMakeLists.txt
+++ b/drivers/motor/ethercat_hardware/CMakeLists.txt
@@ -3,3 +3,4 @@ include(rosbuild)
 rospack(ethercat_hardware)
 add_definitions(-Wall)
 rospack_add_library(ethercat_hardware src/ethercat_hardware.cpp src/wg05.cpp src/ek1122.cpp)
+rospack_add_executable(motorconf src/motorconf.cpp src/ethercat_hardware.cpp src/wg05.cpp src/ek1122.cpp)
