Added greedy heuristic
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4223 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/highlevel/executive_trex/executive_trex_pr2/cfg/exec.solver.cfg
+++ b/highlevel/executive_trex/executive_trex_pr2/cfg/exec.solver.cfg
@@ -6,7 +6,7 @@
     			<FlawHandler component="StandardThreatHandler"/>
   		</ThreatManager>
 
-  		<OpenConditionManager defaultPriority="100">
+  		<OpenConditionManager defaultPriority="100" component="GreedyOpenConditionManager">
     			<FlawFilter component="NoGoals"/>
     			<FlawHandler component="StandardOpenConditionHandler"/>
     			<FlawHandler class-match="MoveBase" component="StandardOpenConditionHandler" priority="90"/>
@@ -17,7 +17,7 @@
     			<FlawHandler component="StandardVariableHandler"/>
   		</UnboundVariableManager>
 
-  		<OpenConditionManager  defaultPriority="10000">
+  		<OpenConditionManager  defaultPriority="10000" component="GreedyOpenConditionManager">
     			<!--- Include only goals which are "done" by the orientering solver --->
     			<FlawFilter component="DynamicGoalFilter"/>
     			<FlawHandler component="StandardOpenConditionHandler"/>
