getting things working incrementally and building tests as I go.  caching is pretty solid and tested includeing cartesian interpolation and extrapolation, and 0 time queries.
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4237 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/util/tf/CMakeLists.txt
+++ b/util/tf/CMakeLists.txt
@@ -15,5 +15,7 @@ target_link_libraries(simpletest tf)
 #target_link_libraries(testMatrixQuaternion TF)
 #rospack_add_gtest(pose3d_unittest test/pose3d_unittest.cpp src/Pose3D.cpp)
 #target_link_libraries(pose3d_unittest TF)
-#rospack_add_gtest(libTF_unittest test/libTF_unittest.cpp)
-#target_link_libraries(libTF_unittest TF)
+rospack_add_gtest(tf_unittest test/tf_unittest.cpp)
+target_link_libraries(tf_unittest tf)
+rospack_add_gtest(cache_unittest test/cache_unittest.cpp)
+target_link_libraries(cache_unittest tf)
