updating the cmake to build the little command-line query amcl query tool
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4272 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/nav/amcl_player/CMakeLists.txt
+++ b/nav/amcl_player/CMakeLists.txt
@@ -4,3 +4,5 @@ rospack(amcl_player)
 rospack_add_executable(amcl_player amcl_player.cc)
 target_link_libraries(amcl_player playerdrivers)
 
+rospack_add_executable(cli cli.cpp)
+
