added a smoothing mechanism in joint position/velocity controllers as implemented by david ; updated the joint autotuner to use joint state structures (still some cleanup to do); python interface for the controllers (as needed by teleop_robot)
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4281 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/controllers/generic_controllers/CMakeLists.txt
+++ b/controllers/generic_controllers/CMakeLists.txt
@@ -3,4 +3,15 @@ include(rosbuild)
 rospack(generic_controllers)
 genmsg()
 gensrv()
-rospack_add_library(generic_controllers src/joint_effort_controller.cpp src/joint_position_controller.cpp src/joint_velocity_controller.cpp src/ramp_effort_controller.cpp src/sine_sweep_controller.cpp src/joint_pd_controller.cpp)
+rospack_add_library(generic_controllers 
+ src/joint_effort_controller.cpp 
+ src/joint_position_controller.cpp 
+ src/joint_velocity_controller.cpp 
+ src/ramp_effort_controller.cpp 
+ src/sine_sweep_controller.cpp 
+ src/joint_sine_sweep_controller.cpp
+ src/joint_autotuner.cpp 
+ src/joint_pd_controller.cpp 
+ src/joint_calibration_controller.cpp
+ src/joint_blind_calibration_controller.cpp
+ src/joint_manual_calibration_controller.cpp)
