adding patch for aCos overflow due to floating point calculation errors.  Ticket #293.
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4314 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/3rdparty/bullet/Makefile
+++ b/3rdparty/bullet/Makefile
@@ -9,6 +9,7 @@ include $(shell rospack find mk)/download_unpack.mk
 
 bullet: $(SOURCE_DIR) quaternion.patch
 	patch -p0 < quaternion.patch
+	patch -p0 < aCos_overflow.diff
 	cd $(SOURCE_DIR) && cmake .
 	make -C $(SOURCE_DIR) LibLinearMath
 	touch bullet
