--- a/highlevel/executive_trex/executive_trex_pr2/cfg/pr2.cfg
+++ b/highlevel/executive_trex/executive_trex_pr2/cfg/pr2.cfg
@@ -10,16 +10,20 @@
  	<TeleoReactor name="baseControllerAdapter" component="BaseControllerAdapter" timelineName="moveBase" timelineType="MoveBase" stateTopic="state" goalTopic="goal">
 		<Timeline name="moveBase"/>
 	</TeleoReactor>
- 	<TeleoReactor name="leftArmStateAdapter" component="ArmStateAdapter" timelineName="leftArmState" timelineType="ArmState" stateTopic="left_pr2arm_pos">
-		<Timeline name="leftArmState"/>
-	</TeleoReactor>
- 	<TeleoReactor name="leftArmControllerAdapter" component="ArmControllerAdapter" timelineName="moveLeftArm" timelineType="MoveArm" stateTopic="left_arm_state" goalTopic="left_arm_goal">
-		<Timeline name="moveLeftArm"/>
-	</TeleoReactor>
- 	<TeleoReactor name="rightArmStateAdapter" component="ArmStateAdapter" timelineName="rightArmState" timelineType="ArmState" stateTopic="right_pr2arm_pos">
+ 	<TeleoReactor name="rightArmStateAdapter" component="RightArmStateAdapter" timelineName="rightArmState" timelineType="ArmState" stateTopic="mechanism_state">
 		<Timeline name="rightArmState"/>
 	</TeleoReactor>
  	<TeleoReactor name="rightArmControllerAdapter" component="ArmControllerAdapter" timelineName="moveRightArm" timelineType="MoveArm" stateTopic="right_arm_state" goalTopic="right_arm_goal">
 		<Timeline name="moveRightArm"/>
 	</TeleoReactor>
+
+<!-- Only use one arm for now
+ 	<TeleoReactor name="leftArmStateAdapter" component="LeftArmStateAdapter" timelineName="leftArmState" timelineType="ArmState" stateTopic="mechanism_state">
+		<Timeline name="leftArmState"/>
+	</TeleoReactor>
+ 	<TeleoReactor name="leftArmControllerAdapter" component="ArmControllerAdapter" timelineName="moveLeftArm" timelineType="MoveArm" stateTopic="left_arm_state" goalTopic="left_arm_goal">
+		<Timeline name="moveLeftArm"/>
+	</TeleoReactor>
+-->
+
 </Agent>
