added some tests to help diagnose #466
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4351 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/mechanism/mechanism_control/CMakeLists.txt
+++ b/mechanism/mechanism_control/CMakeLists.txt
@@ -4,3 +4,4 @@ rospack(mechanism_control)
 genmsg()
 gensrv()
 rospack_add_library(mechanism_control src/mechanism_control.cpp)
+#rospack_add_executable(ms_publisher_test test/ms_publisher_test.cpp)
