--- a/mechanism/mechanism_control/CMakeLists.txt
+++ b/mechanism/mechanism_control/CMakeLists.txt
@@ -5,3 +5,5 @@ genmsg()
 gensrv()
 rospack_add_library(mechanism_control src/mechanism_control.cpp)
 #rospack_add_executable(ms_publisher_test test/ms_publisher_test.cpp)
+#rospack_add_rostest(test/test-mechanism-state-cpp.xml)
+#rospack_add_rostest(test/test-mechanism-state-py.xml)
