moving appropriate stuff into source, and beginning ros interface
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4367 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/util/tf/CMakeLists.txt
+++ b/util/tf/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 2.6)
 include(rosbuild)
 rospack(tf)
 
-rospack_add_library(tf src/tf.cpp)
+rospack_add_library(tf src/tf.cpp src/client.cpp src/cache.cpp)
+
 rospack_add_executable(simpletest simpletest.cpp)
 target_link_libraries(simpletest tf)
 #rospack_add_executable(testtf src/test/testtf.cc)
