successful send and recieve
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4391 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/util/tf/CMakeLists.txt
+++ b/util/tf/CMakeLists.txt
@@ -25,3 +25,8 @@ target_link_libraries(cache_unittest tf)
 
 
 rospack_add_executable(btTest test/quaternion.cpp)
+rospack_add_executable(testClient test/testClient.cpp)
+target_link_libraries(testClient tf)
+                                 
+rospack_add_executable(testServer test/testServer.cpp)
+target_link_libraries(testServer tf)
