--- a/util/tf/CMakeLists.txt
+++ b/util/tf/CMakeLists.txt
@@ -28,5 +28,5 @@ rospack_add_executable(btTest test/quaternion.cpp)
 rospack_add_executable(testClient test/testClient.cpp)
 target_link_libraries(testClient tf)
                                  
-rospack_add_executable(testServer test/testServer.cpp)
-target_link_libraries(testServer tf)
+rospack_add_executable(testSender test/testSender.cpp)
+target_link_libraries(testSender tf)
