--- a/drivers/simulator/gazebo_plugin/CMakeLists.txt
+++ b/drivers/simulator/gazebo_plugin/CMakeLists.txt
@@ -12,7 +12,7 @@ add_definitions(-Wall)
 rospack_add_library(Ros_Stereo_Camera src/Ros_Stereo_Camera.cc)
 rospack_add_library(Ros_Camera src/Ros_Camera.cc)
 rospack_add_library(Ros_Laser src/Ros_Laser.cc)
-#rospack_add_library(Ros_Node src/Ros_Node.cc)
+rospack_add_library(Ros_Time src/Ros_Time.cc)
 rospack_add_library(Ros_PTZ src/Ros_PTZ.cc)
 rospack_add_library(P3D src/P3D.cc)
 rospack_add_library(gazebo_actuators src/gazebo_actuators.cpp)
