Added optimization flags to CMakeLists.txt. Added least distance functor that cuts off calculation when it exceeds the current least distance, but it seems not to give any speedup for signatures.
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4421 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/vision/calonder_descriptor/CMakeLists.txt
+++ b/vision/calonder_descriptor/CMakeLists.txt
@@ -1,6 +1,5 @@
 cmake_minimum_required(VERSION 2.6)
 include(rosbuild)
 rospack(calonder_descriptor)
-add_definitions(-Wall)
-add_definitions(-I`rospack find opencv_latest`/opencv-cvs/cxcore/include)
+add_definitions(-Wall -O3 -DNDEBUG)
 rospack_add_library(calonder src/randomized_tree.cpp src/rtree_classifier.cpp src/patch_generator.cpp)
