update gazebo plugin to publish full_cloud from  stereo.  can be viewed from irrlicht viewer.
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4422 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/drivers/simulator/gazebo_plugin/CMakeLists.txt
+++ b/drivers/simulator/gazebo_plugin/CMakeLists.txt
@@ -12,6 +12,7 @@ add_definitions(-Wall)
 rospack_add_library(Ros_Stereo_Camera src/Ros_Stereo_Camera.cc)
 rospack_add_library(Ros_Camera src/Ros_Camera.cc)
 rospack_add_library(Ros_Laser src/Ros_Laser.cc)
+rospack_add_library(Ros_Block_Laser src/Ros_Block_Laser.cc)
 rospack_add_library(Ros_Time src/Ros_Time.cc)
 rospack_add_library(Ros_PTZ src/Ros_PTZ.cc)
 rospack_add_library(P3D src/P3D.cc)
