--- a/vision/star_detector/src/test/Makefile
+++ b/vision/star_detector/src/test/Makefile
@@ -1,9 +1,18 @@
 CC = g++
 CFLAGS = -c -g -Wall -I/usr/include -I../../include
 CFLAGS += -O3 -DNDEBUG
-CFLAGS += `pkg-config opencv --cflags`
-LDFLAGS = `pkg-config opencv --libs`
-SOURCES = ../integral.cpp ../detector.cpp ../keypoint.cpp keypoint_utils.cpp
+# OpenCV
+CV_LATEST = $(shell rospack find opencv_latest)/opencv
+CFLAGS += -I$(CV_LATEST)/include/opencv
+LDFLAGS = -L$(CV_LATEST)/lib -lcv -lhighgui
+# Boost
+CFLAGS += -I$(BOOST_ROOT)/include
+# Star detector
+STAR_DIR = $(shell rospack find star_detector)
+CFLAGS += -I/usr/include -I$(STAR_DIR)/include
+LDFLAGS += -L$(STAR_DIR)/lib -lstarfeature
+
+SOURCES = keypoint_utils.cpp
 OBJECTS = $(SOURCES:.cpp=.o)
 PROGRAMS = affine_test show_keypts transform_image
 PROGRAMS += willow_detect repeatability willow_timing
@@ -11,7 +20,7 @@ PROGRAMS += willow_detect repeatability willow_timing
 # SURF_ROOT must be set appropriately
 CFLAGS += -I$(SURF_ROOT)
 SURF_LDFLAGS = $(LDFLAGS) -L$(SURF_ROOT) -lSurf
-SURF_SOURCES = surf_points.cpp ../keypoint.cpp $(SURF_ROOT)/imload.cpp keypoint_utils.cpp
+SURF_SOURCES = surf_points.cpp $(SURF_ROOT)/imload.cpp keypoint_utils.cpp
 SURF_OBJECTS = $(SURF_SOURCES:.cpp=.o)
 SURF_PROGRAMS = surf_detect
 
@@ -39,4 +48,4 @@ $(SIFT_PROGRAMS): $$@.o $(OBJECTS)
 	$(CC) $(CFLAGS) $< -o $@
 
 clean:
-	rm $(PROGRAMS) $(SIFT_PROGRAMS) $(SURF_PROGRAMS) *.o ../*.o
+	rm -f $(PROGRAMS) $(SIFT_PROGRAMS) $(SURF_PROGRAMS) *.o
