Switched to use name value pairs and configuration data instead of hard-coded message structures and index values
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4447 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/highlevel/executive_trex/executive_trex_pr2/cfg/pr2.cfg
+++ b/highlevel/executive_trex/executive_trex_pr2/cfg/pr2.cfg
@@ -10,19 +10,47 @@
  	<TeleoReactor name="baseControllerAdapter" component="BaseControllerAdapter" timelineName="moveBase" timelineType="MoveBase" stateTopic="state" goalTopic="goal">
 		<Timeline name="moveBase"/>
 	</TeleoReactor>
- 	<TeleoReactor name="rightArmStateAdapter" component="RightArmStateAdapter" timelineName="rightArmState" timelineType="ArmState" stateTopic="mechanism_state">
+ 	<TeleoReactor name="rightArmStateAdapter" component="ArmStateAdapter" timelineName="rightArmState" timelineType="ArmState" stateTopic="mechanism_state">
 		<Timeline name="rightArmState"/>
+		<Param nddl="shoulder_pan" ros="shoulder_pan_right_joint"/>
+		<Param nddl="shoulder_pitch" ros="shoulder_pitch_right_joint"/>
+		<Param nddl="upperarm_roll" ros="upper_arm_roll_right_joint"/>
+		<Param nddl="elbow_flex" ros="elbow_flex_right_joint"/>
+		<Param nddl="forearm_roll" ros="forearm_roll_right_joint"/>
+		<Param nddl="wrist_flex" ros="wrist_flex_right_joint"/>
+		<Param nddl="gripper_roll" ros="gripper_roll_right_joint"/>
 	</TeleoReactor>
  	<TeleoReactor name="rightArmControllerAdapter" component="ArmControllerAdapter" timelineName="moveRightArm" timelineType="MoveArm" stateTopic="right_arm_state" goalTopic="right_arm_goal">
 		<Timeline name="moveRightArm"/>
+		<Param nddl="shoulder_pan" ros="shoulder_pan_right_joint"/>
+		<Param nddl="shoulder_pitch" ros="shoulder_pitch_right_joint"/>
+		<Param nddl="upperarm_roll" ros="upper_arm_right_joint"/>
+		<Param nddl="elbow_flex" ros="elbow_flex_right_joint"/>
+		<Param nddl="forearm_roll" ros="forearm_roll_right_joint"/>
+		<Param nddl="wrist_flex" ros="wrist_flex_right_joint"/>
+		<Param nddl="gripper_roll" ros="gripper_roll_right_joint"/>
 	</TeleoReactor>
 
 <!-- Only use one arm for now
- 	<TeleoReactor name="leftArmStateAdapter" component="LeftArmStateAdapter" timelineName="leftArmState" timelineType="ArmState" stateTopic="mechanism_state">
+ 	<TeleoReactor name="leftArmStateAdapter" component="ArmStateAdapter" timelineName="leftArmState" timelineType="ArmState" stateTopic="mechanism_state">
 		<Timeline name="leftArmState"/>
+		<Param nddl="shoulder_pan" ros="shoulder_pan_left_joint"/>
+		<Param nddl="shoulder_pitch" ros="shoulder_pitch_left_joint"/>
+		<Param nddl="upperarm_roll" ros="upper_arm_left_joint"/>
+		<Param nddl="elbow_flex" ros="elbow_flex_left_joint"/>
+		<Param nddl="forearm_roll" ros="forearm_roll_joint"/>
+		<Param nddl="wrist_flex" ros="wrist_flex_left_joint"/>
+		<Param nddl="gripper_roll" ros="gripper_roll_left_joint"/>
 	</TeleoReactor>
  	<TeleoReactor name="leftArmControllerAdapter" component="ArmControllerAdapter" timelineName="moveLeftArm" timelineType="MoveArm" stateTopic="left_arm_state" goalTopic="left_arm_goal">
 		<Timeline name="moveLeftArm"/>
+		<Param nddl="shoulder_pan" ros="shoulder_pan_left_joint"/>
+		<Param nddl="shoulder_pitch" ros="shoulder_pitch_left_joint"/>
+		<Param nddl="upperarm_roll" ros="upper_arm_left_joint"/>
+		<Param nddl="elbow_flex" ros="elbow_flex_left_joint"/>
+		<Param nddl="forearm_roll" ros="forearm_roll_left_joint"/>
+		<Param nddl="wrist_flex" ros="wrist_flex_left_joint"/>
+		<Param nddl="gripper_roll" ros="gripper_roll_left_joint"/>
 	</TeleoReactor>
 -->
 
