Moved generic_controllers to robot_mechanism_controllers
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4455 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/controllers/robot_mechanism_controllers/CMakeLists.txt
+++ b/controllers/robot_mechanism_controllers/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 2.6)
 include(rosbuild)
-rospack(generic_controllers)
+rospack(robot_mechanism_controllers)
 genmsg()
 gensrv()
-rospack_add_library(generic_controllers
+rospack_add_library(robot_mechanism_controllers
  src/joint_effort_controller.cpp
  src/joint_position_controller.cpp
  src/joint_velocity_controller.cpp
