--- a/util/tf/CMakeLists.txt
+++ b/util/tf/CMakeLists.txt
@@ -22,6 +22,8 @@ rospack_add_gtest(tf_unittest test/tf_unittest.cpp)
 target_link_libraries(tf_unittest tf)
 rospack_add_gtest(cache_unittest test/cache_unittest.cpp)
 target_link_libraries(cache_unittest tf)
+rospack_add_gtest(bullet_unittest test/bullet_unittest.cpp)
+target_link_libraries(bullet_unittest tf)
 
 
 rospack_add_executable(btTest test/quaternion.cpp)
