--- a/highlevel/highlevel_controllers/CMakeLists.txt
+++ b/highlevel/highlevel_controllers/CMakeLists.txt
@@ -4,5 +4,11 @@ add_definitions(-Wall)
 
 rospack(highlevel_controllers)
 
-rospack_add_executable(move_arm
-	src/MoveArm.cpp)
+# MoveArm
+rospack_add_executable(move_arm src/MoveArm.cpp)
+
+# MoveBase
+rospack_add_library(highlevel_controllers src/MoveBase.cpp)
+rospack_add_executable(move_base_sbpl src/move_base_sbpl.cpp)
+target_link_libraries(move_base_sbpl highlevel_controllers)
+target_link_libraries(highlevel_controllers costmap_2d)
