--- a/vision/dorylus/CMakeLists.txt
+++ b/vision/dorylus/CMakeLists.txt
@@ -4,7 +4,7 @@ rospack(dorylus)
 add_definitions(-Wall)
 add_definitions(-I`rospack find opencv_latest`/opencv-cvs/cxcore/include)
 rospack_add_executable(dorylus_node src/dorylus_node.cpp src/dorylus.cpp)
-#target_link_libraries(dorylus_node profiler)		 
+target_link_libraries(dorylus_node profiler)		 
 
 
 
